fix: mail sender

--- a/src/mails/templates/index.html
+++ b/src/mails/templates/index.html
@@ -44,7 +44,15 @@
                   {{link}}
                 </a>
               </p>
-          
+              <br /><br />
+
+              <blockquote>
+                <p>
+                  Hiduplah seolah-olah kamu akan mati besok. Belajarlah
+                  seolah-olah Anda hidup selamanya.
+                </p>
+                <footer>Mahatma Gandhi</footer>
+              </blockquote>
             </div>
             <br />
             <div class="footer">
