fix: email template

--- a/src/mails/templates/forgot.handlebars
+++ b/src/mails/templates/forgot.handlebars
@@ -33,8 +33,8 @@
               </p>
 
               <div class="normal">
-                <a href="{{link}}" rel="no-referrer" target="_blank">
-                  <button class="btn btn-primary btn-sm">Ubah Password</button>
+                <a href="{{link}}" rel="no-referrer" target="_blank" class="btn btn-primary btn-sm">
+                  Ubah Password
                 </a>
               </div>
 
