--- a/src/mails/templates/register.handlebars
+++ b/src/mails/templates/register.handlebars
@@ -29,10 +29,8 @@
               </p>
 
               <div class="text-center mt-2">
-                <a href="{{link}}" rel="no-referrer" target="_blank">
-                  <button class="btn btn-primary btn-lg">
-                    Verifikasi Sekarang
-                  </button>
+                <a href="{{link}}" rel="no-referrer" target="_blank" class="btn btn-primary btn-lg">
+                  Verifikasi Sekarang
                 </a>
               </div>
 
